--- a/QuanLyThongTinDaoTao/packages.config
+++ b/QuanLyThongTinDaoTao/packages.config
@@ -14,7 +14,14 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.3.0" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net481" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.4" targetFramework="net481" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Options" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.Extensions.Primitives" version="9.0.4" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net481" />
   <package id="Microsoft.SqlServer.Server" version="1.0.0" targetFramework="net481" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net481" />
@@ -25,9 +32,11 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net481" />
   <package id="QRCoder" version="1.6.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net481" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
 </packages>
