--- a/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
+++ b/QuanLyThongTinDaoTao/QuanLyThongTinDaoTao.csproj
@@ -55,6 +55,15 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.5.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.4\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.4\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Owin, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Owin.2.2.4\lib\net45\Microsoft.AspNet.Identity.Owin.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=9.0.0.4, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.9.0.4\lib\net462\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -77,11 +86,29 @@
     <Reference Include="Microsoft.Extensions.Primitives, Version=9.0.0.4, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Extensions.Primitives.9.0.4\lib\net462\Microsoft.Extensions.Primitives.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Owin, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.4.2.2\lib\net45\Microsoft.Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Host.SystemWeb, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Host.SystemWeb.4.2.2\lib\net45\Microsoft.Owin.Host.SystemWeb.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.4.2.2\lib\net45\Microsoft.Owin.Security.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.Cookies, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.Cookies.4.2.2\lib\net45\Microsoft.Owin.Security.Cookies.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Owin.Security.OAuth, Version=4.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Owin.Security.OAuth.4.2.2\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.SqlServer.Server, Version=1.0.0.0, Culture=neutral, PublicKeyToken=23ec7fc2d6eaa4a5, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.SqlServer.Server.1.0.0\lib\net46\Microsoft.SqlServer.Server.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json.Bson, Version=1.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.Bson.1.0.2\lib\net45\Newtonsoft.Json.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
+      <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
@@ -116,6 +143,7 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="System.Security" />
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -215,7 +243,6 @@
     <Compile Include="Areas\Admin\Controllers\KhoaHocController.cs" />
     <Compile Include="Areas\Admin\Controllers\LopHocController.cs" />
     <Compile Include="Areas\Admin\Controllers\HocVienController.cs" />
-    <Compile Include="Areas\Admin\Controllers\PhanQuyenController.cs" />
     <Compile Include="Areas\Admin\Controllers\LoginController.cs" />
     <Compile Include="Controllers\CoursesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -226,34 +253,22 @@
     <Compile Include="Helpers\CustomAuthorizeAttribute.cs" />
     <Compile Include="Helpers\OtpCache.cs" />
     <Compile Include="Helpers\QuyenConstants.cs" />
+    <Compile Include="Identity\AppRoleManager.cs" />
+    <Compile Include="Identity\AppSignInManager.cs" />
+    <Compile Include="Identity\AppUserManager.cs" />
     <Compile Include="LoginModelView\LoginViewModel.cs" />
-    <Compile Include="Migrations\202504051400506_update.cs" />
-    <Compile Include="Migrations\202504051400506_update.Designer.cs">
-      <DependentUpon>202504051400506_update.cs</DependentUpon>
+    <Compile Include="Migrations\202504220616156_2204.cs" />
+    <Compile Include="Migrations\202504220616156_2204.Designer.cs">
+      <DependentUpon>202504220616156_2204.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202504060520235_1220.cs" />
-    <Compile Include="Migrations\202504060520235_1220.Designer.cs">
-      <DependentUpon>202504060520235_1220.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504100810548_5da5.cs" />
-    <Compile Include="Migrations\202504100810548_5da5.Designer.cs">
-      <DependentUpon>202504100810548_5da5.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504140653028_UpAdmin.cs" />
-    <Compile Include="Migrations\202504140653028_UpAdmin.Designer.cs">
-      <DependentUpon>202504140653028_UpAdmin.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504140727495_UpAad.cs" />
-    <Compile Include="Migrations\202504140727495_UpAad.Designer.cs">
-      <DependentUpon>202504140727495_UpAad.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202504140739174_FixPhanQuyenNguoiDungRelationship.cs" />
-    <Compile Include="Migrations\202504140739174_FixPhanQuyenNguoiDungRelationship.Designer.cs">
-      <DependentUpon>202504140739174_FixPhanQuyenNguoiDungRelationship.cs</DependentUpon>
+    <Compile Include="Migrations\202504221718084_2304.cs" />
+    <Compile Include="Migrations\202504221718084_2304.Designer.cs">
+      <DependentUpon>202504221718084_2304.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ModelsHelper\DangKyHocRequest.cs" />
     <Compile Include="ModelsHelper\VerifyOtpRequest.cs" />
+    <Compile Include="Models\AppUser.cs" />
     <Compile Include="Models\Attachment.cs" />
     <Compile Include="Models\BuoiHoc.cs" />
     <Compile Include="Models\BuoiHocAttachment.cs" />
@@ -264,18 +279,16 @@
     <Compile Include="Models\GiangVien.cs" />
     <Compile Include="Models\GiangVien_BuoiHoc.cs" />
     <Compile Include="Models\HocVien.cs" />
-    <Compile Include="Models\HocVienTempData.cs" />
     <Compile Include="Models\KhoaHoc.cs" />
     <Compile Include="Models\KhoaHocAttachment.cs" />
     <Compile Include="Models\LopHoc.cs" />
     <Compile Include="Models\LopHocAttachment.cs" />
-    <Compile Include="Models\NguoiDung.cs" />
-    <Compile Include="Models\PhanQuyen.cs" />
     <Compile Include="Models\ThongBao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\GiangVienService.cs" />
     <Compile Include="Services\HocVienService.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Asset\css\styles.css" />
@@ -530,23 +543,11 @@
     <Content Include="Scripts\jquery-3.7.0.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202504051400506_update.resx">
-      <DependentUpon>202504051400506_update.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202504220616156_2204.resx">
+      <DependentUpon>202504220616156_2204.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504060520235_1220.resx">
-      <DependentUpon>202504060520235_1220.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504100810548_5da5.resx">
-      <DependentUpon>202504100810548_5da5.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504140653028_UpAdmin.resx">
-      <DependentUpon>202504140653028_UpAdmin.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504140727495_UpAad.resx">
-      <DependentUpon>202504140727495_UpAad.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202504140739174_FixPhanQuyenNguoiDungRelationship.resx">
-      <DependentUpon>202504140739174_FixPhanQuyenNguoiDungRelationship.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202504221718084_2304.resx">
+      <DependentUpon>202504221718084_2304.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
