--- a/QuanLyThongTinDaoTao/Web.config
+++ b/QuanLyThongTinDaoTao/Web.config
@@ -32,7 +32,7 @@
 
 		<!-- Forms Authentication -->
 		<authentication mode="Forms">
-			<forms loginUrl="~/Account/Login" timeout="2880" />
+			<forms loginUrl="~/Admin/Login/DangNhap" timeout="2880" />
 		</authentication>
 
 		<authorization>
