--- a/QuanLyThongTinDaoTao/Web.config
+++ b/QuanLyThongTinDaoTao/Web.config
@@ -122,19 +122,17 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<system.webServer>
-	<security>
-		<requestFiltering>
-			<requestLimits maxAllowedContentLength="1073741824" />
-			<!-- Giới hạn 1GB (1073741824 bytes) -->
-		</requestFiltering>
-	</security>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-</system.webServer>
-
+	<system.webServer>
+		<security>
+			<requestFiltering allowDoubleEscaping="true">
+				<requestLimits maxAllowedContentLength="1073741824" />
+			</requestFiltering>
+		</security>
+		<handlers>
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<remove name="OPTIONSVerbHandler" />
+			<remove name="TRACEVerbHandler" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+		</handlers>
+	</system.webServer>
 </configuration>
