--- a/QuanLyThongTinDaoTao/packages.config
+++ b/QuanLyThongTinDaoTao/packages.config
@@ -4,6 +4,8 @@
   <package id="BCrypt.Net-Next" version="4.0.3" targetFramework="net481" />
   <package id="bootstrap" version="5.2.3" targetFramework="net481" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net481" />
+  <package id="EPPlus" version="4.5.3.3" targetFramework="net481" />
+  <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net481" />
   <package id="jQuery" version="3.7.0" targetFramework="net481" />
   <package id="jQuery.Validation" version="1.19.5" targetFramework="net481" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net481" />
@@ -25,6 +27,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="9.0.4" targetFramework="net481" />
   <package id="Microsoft.Extensions.Options" version="9.0.4" targetFramework="net481" />
   <package id="Microsoft.Extensions.Primitives" version="9.0.4" targetFramework="net481" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net481" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net481" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net481" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net481" />
@@ -41,10 +44,12 @@
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net481" />
   <package id="QRCoder" version="1.6.0" targetFramework="net481" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net481" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net481" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" targetFramework="net481" />
   <package id="System.Memory" version="4.5.5" targetFramework="net481" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net481" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net481" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net481" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net481" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net481" />
   <package id="WebGrease" version="1.6.0" targetFramework="net481" />
